--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </div>
       <!-- Profile Picture -->
-      <img src="CV.pic.jpg" alt="Profile Picture" class="profile-pic">
+      <img src="/profile.jpg" alt="Profile Picture" class="profile-pic">
     </header>
 
     <div class="section">
@@ -129,3 +129,4 @@
   </div>
 </body>
 </html>
+
